<resources>
    <string name="app_name">ReceiverService</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="close">close</string>
    <string name="exit">exit</string>
    <string name="play_music">PlayMusic</string>
    <string name="notification_song_single_name">嗒玲嗒玲嗒嗒玲嗒玲嗒</string>
    <string name="notification_song_name">嗒玲嗒玲嗒</string>
    <string name="notification_playing">正在播放</string>

</resources>
